# Rust-render-engine

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_STATUS.md  README.md
src/: lib.rs  main.rs
src/app/: applied_config.rs  coords_sys.rs  em_profile.rs  em_runtime.rs  field_render.rs  field_runtime.rs  grid.rs  grid_world.rs  mod.rs  tangent_space.rs  ui.rs  world.rs
src/app/em_runtime/: cache_tests.rs  fields.rs  maxwell.rs  plane_wave.rs  plane_wave_tests.rs  potentials.rs  runtime_tests.rs
src/app/field_render/: em_cache.rs  tests.rs
src/app/tangent_space/: dive.rs  tests.rs  types.rs
src/app/ui/: app.rs  legend.rs  mod.rs  presets.rs  state.rs  theme.rs  validation.rs
src/app/ui/app/: tabs.rs
src/app/world/: apply.rs  field_rendering.rs  frame.rs  grid_cache.rs
src/graphics/: model.rs
src/maths/: differential.rs  field.rs  mod.rs  space.rs
src/render/: classic_shader.rs  field_renderer.rs  field_shader.rs  grid_renderer.rs  grid_shader.rs  master_render.rs  mod.rs  renderer.rs
src/res/shader/: classic.frag  classic.vert  field.vert  grid.frag  grid.vert  grid_edit.vert
src/toolbox/: camera.rs  color.rs  input.rs  logging.rs  maths.rs  mod.rs  obj_loader.rs
src/toolbox/opengl/: OpenGlUtils.rs  display_manager.rs  mod.rs  open_gl_utils.rs  vao.rs  vbo.rs
src/toolbox/opengl/shader/: mod.rs  shader_program.rs
src/toolbox/opengl/shader/uniform/: floatuniform.rs  matrix4uniform.rs  mod.rs  uniform.rs  vec3uniform.rs  vec4uniform.rs
tests/: coords_field_tests.rs  em_runtime_tests.rs  emex_tests.rs  matrix_tests.rs  metric.rs  meval_tests.rs  py3_tests.rs  render_vfield_tests.rs  symbolica_tests.rs  trig_tests.rs
