[package]
name = "render_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
bytemuck = "1"
glfw = "0.59.0"
imagine = "0.5.1"
chrono = "0.4.39"
lazy_static = "1.5.0"
include_dir = "0.7.4"
meval = { version = "0.2", features = ["serde"] }
serde_derive = "1"
serde = "1.0.216"
toml = "0.4.5"
exmex = { version = "0.20.3", features = ["partial", "serde", "value"] }
nalgebra = "0.33.2"
rustc-hash = "2.1.1"
symbolica = "0.18.0"
pyo3 = "0.26.0"
typed_floats = "1.0.7"
rand = "0.9.2"

[dev-dependencies]
