[package]
name = "render_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
bytemuck = "1"
glfw = "0.62.0"
chrono = "0.4.39"
lazy_static = "1.5.0"
include_dir = "0.7.4"
meval = { version = "0.2", features = ["serde"] }
serde_derive = "1"
serde = "1.0.216"
toml = "0.4.5"
nalgebra = "0.34.1"
rustc-hash = "2.1.1"
typed_floats = "1.0.7"
rand = "0.9.2"
once_cell = "1.21.3"
integrate = "0.1.11"
ndarray = "0.17.1"
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["glow"] }
winit = "0.30.13"
kd-tree = { version="0.6.2", features = ["rayon"] }
mathhook = { git = "https://github.com/ostix360/mathhook"}
mathhook-core = { git = "https://github.com/ostix360/mathhook"}


[dev-dependencies]
